host name changed to companybookbuild-002.servers.prgn.misp.co.uk

--- a/singlenode-sample.ini
+++ b/singlenode-sample.ini
@@ -1,6 +1,6 @@
 clusterName=singlenode
-ambariServerHostName=namenode
-hostNames=namenode
+ambariServerHostName=companybookbuild-002.servers.prgn.misp.co.uk
+hostNames=companybookbuild-002.servers.prgn.misp.co.uk
 externalIPs=185.119.172.32
 
 blueprintName=singlenode
